# new-grad-2027-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTIVE_JOBS.md  AUTOMATION.md  DEPLOY.md  Makefile  NEW_JOBS.md  README.md  fetch_history.csv  pyproject.toml  railway.json  roles.json  update_tracker.py
.github/workflows/: monitor.yml  tests.yml  update-tracker.yml
config/: companies.yaml  filters.yaml  profile.yaml
data/: active_jobs.csv  active_jobs.json  archived_jobs.json  new_jobs.json  source_health.json
docs/: app.js  index.html  style.css
docs/data/: active_jobs.json  new_jobs.json  source_health.json
job_monitor/: __init__.py  cli.py  config.py  dedupe.py  errors.py  filters.py  http.py  llm.py  models.py  notify.py  report.py  runner.py  scoring.py  sponsorship.py  store.py  textutil.py
job_monitor/adapters/: __init__.py  ashby.py  base.py  eightfold.py  greenhouse.py  html_page.py  json_endpoint.py  jsonld.py  lever.py  playwright_page.py  workday.py
tests/: conftest.py  test_adapters.py  test_dedupe.py  test_filters.py  test_reports.py  test_runner.py  test_scoring.py  test_sponsorship.py  test_store_and_state.py  test_workflows_and_config.py
tests/fixtures/: ashby.json  eightfold.json  generic.html  greenhouse.json  jsonld.html  lever.json
